# llm-code-cache-mcp

./: DESIGN.md  README.md  docker-compose.yml  pyproject.toml
scripts/: smoke_graph_store.py
src/llm-code-cache/ingest/: chunker.py  models.py  parser.py  walker.py
src/llm-code-cache/ingest/enums/: edge_kind.py  node_kind.py  ts_field_name.py  ts_node_type.py
src/llm_code_cache/: cli.py  config.py
src/llm_code_cache/graph/: __init__.py  models.py  store.py
src/llm_code_cache/graph/enums/: __init__.py  edge_field.py  node_field.py  node_property.py  traversal_direction.py
src/llm_code_cache/graph/queries/: __init__.py  clear_repo.cypher  constraints.cypher  find_definition.cypher  get_neighbors.cypher  indexes.cypher  upsert_edges.cypher  upsert_nodes.cypher
src/llm_code_cache/ingest/: __init__.py  chunker.py  constants.py  models.py  parser.py  walker.py
src/llm_code_cache/ingest/enums/: __init__.py  edge_kind.py  ts_field_name.py  ts_node_type.py
src/llm_code_cache/mcp_servcer/: main.py
src/llm_code_cache/mcp_server/: __init__.py  server.py
src/llm_code_cache/query/: __init__.py  augmentation.py  definition.py  models.py  semantic.py  stores.py  usages.py
src/llm_code_cache/query/enums/: __init__.py  usage_kind.py
src/llm_code_cache/vector/: __init__.py  embedding_config.py  embeddings.py  models.py  store.py
src/llm_code_cache/vector/enums/: __init__.py  embed_provider.py
tests/: conftest.py  test_cli.py  test_config.py  test_mcp_server.py  test_parser.py  test_vector_store.py
tests/ingest/: test_walker.py
tests/integration/: conftest.py  test_graph_store_neo4j.py  test_mcp_server_e2e.py  test_vector_store_pg.py
