[project]
name = "llm-code-cache-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.40.61",
    "httpx>=0.28.1",
    "llama-index>=0.14.21",
    "llama-index-embeddings-bedrock>=0.8.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-vector-stores-postgres>=0.3.0",
    "psycopg2-binary>=2.9",
    "mcp[cli]>=1.27.0",
    "ruff>=0.15.12",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "neo4j>=6.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests requiring docker-compose services (postgres, neo4j) to be running",
]
